--- a/src/app/byengri/byengri/report/report.component.html
+++ b/src/app/byengri/byengri/report/report.component.html
@@ -72,7 +72,7 @@
                   (change)="setOrgan(organ.value)">
               </td>
               <td class="txt_c">
-                <input type="text" size="15" #tumortype class="clr-input" [value]="extraction.tumortype"
+                <input type="text" size="20" #tumortype class="clr-input" [value]="extraction.tumortype"
                   (change)="setTumorType(tumortype.value)">
               </td>
               <td class="txt_c">
@@ -409,9 +409,9 @@
         </div>
         <hr class="mg_t30" />
         <div class="main_title mg_t20 mg_b10">해석적 보고
-          <!-- 해석적 보고<button class="btn btn-success" style="margin-left: 10px;">설명</button> -->
+         
           <a [href]="getUrl()" target="_blank">
-            <button class="btn btn-success">링크</button>
+            <button class="btn btn_01">링크</button>
           </a></div>
 
 
