--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -484,7 +484,7 @@
                   </tr> 
               </table>
   <!--  ------------------------------- ALL   -->
-  <table cellpadding="0" cellspacing="0" class="table_result02"    *ngIf="reportType === 'AlL'">
+  <table cellpadding="0" cellspacing="0" class="table_result02"    *ngIf="reportType === 'ALL'">
        <colgroup>
           <col style="width:10%;"/>
           <col style="width:10%;"/>
