--- a/src/app/home/components/mainscreen/mainscreen.component.html
+++ b/src/app/home/components/mainscreen/mainscreen.component.html
@@ -18,7 +18,19 @@
 
         <input type="text" class="input_01" #testedID placeholder="검체번호" />&nbsp;&nbsp;
         <input name="" type="text" placeholder="환자ID" #patient class="input_01" />&nbsp;&nbsp;
-
+        <select class="select_01 select_001"  #status>
+          <option value="100">접수</option>
+          <option value="0">시작</option>
+          <option value="1">스크린판독</option>
+          <option value="2">판독완료</option>
+          <option value="3">EMR전송</option>
+        </select>&nbsp;&nbsp;
+        <select class="select_01 select_001" #sheet>
+          <option value="AML">AML</option>
+          <option value="ALL">ALL</option>
+          <option value="LYN">Lymphoma</option>
+          <option value="MDS">MDS/MPN</option>
+        </select>&nbsp;&nbsp;
         <input type="date" [value]="startToday()" (change)="getDate(start.value)" #start class="input_01"
           style="width:150px;" />
         ~
@@ -26,7 +38,7 @@
           style="width:150px;">
         <!-- <input type="text"  class="input_01" value="MM/DD" style="width:40px;"/> -->
         <button type="button" class="btn btn_02" style="margin-left: 10px;"
-          (click)="search(start.value, end.value, testedID.value, patient.value)">조 회</button>
+          (click)="search(start.value, end.value, testedID.value, patient.value, status.value, sheet.value)">조 회</button>
       </div>
       <div class="box">
         <div class="box_100">
