진검 검색조건 변경

--- a/src/app/home/components/mainscreen/mainscreen.component.html
+++ b/src/app/home/components/mainscreen/mainscreen.component.html
@@ -20,7 +20,6 @@
         <input name="" type="text" placeholder="환자ID" #patient class="input_01" />&nbsp;&nbsp;
         <select class="select_01 select_001"  #status>
           <option>진행상태</option>
-          <option value="100">접수</option>
           <option value="0">시작</option>
           <option value="1">스크린판독</option>
           <option value="2">판독완료</option>
@@ -28,8 +27,8 @@
         </select>&nbsp;&nbsp;
         <select class="select_01 select_001" #sheet>
           <option>결과지</option>
-          <option value="AlL">전체</option>
-          <option value="ALLAML">ALL/AML</option>
+          <option value="TOTAL">전체</option>
+          <option value="AMLALL">ALL/AML</option>
           <option value="ETC">기타(MDS/MPN,Lymphoma)</option>
         </select>&nbsp;&nbsp;
         <input type="date" [value]="startToday()" (change)="getDate(start.value)" #start class="input_01"
