--- a/src/app/forms/form2/form2.component.html
+++ b/src/app/forms/form2/form2.component.html
@@ -237,7 +237,7 @@
      
     <table class="table table-margin-top fixed_header"  style="text-align: center;">
         <colgroup>           
-            <col style="width:80px"/>
+            <!-- <col style="width:80px"/>
             <col style="width:80px"/>
             <col style="width:80px"/>
             <col style="width:50px"/>
@@ -253,7 +253,24 @@
             <col style="width:100px"/>
             <col style="width:80px"/>
             <col style="width:80px"/> 
-            <col style="width:80px"/>                 
+            <col style="width:80px"/>                  -->
+            <col style="width:80px"/>
+            <col style="width:80px"/>  <!--     -->
+            <col style="width:80px"/>  <!-- IGV -->
+            <col style="width:50px"/>
+            <col style="width:80px"/>  <!-- Type    -->
+            <col style="width:120px"/>   <!-- Gene   -->
+            <col style="width:180px"/>  <!-- Functional Impact    -->
+            <col style="width:160px"/>  <!-- Transcript    --> 
+            <col style="width:150px"/>  <!-- Exon/Intron    -->
+            <col style="width:300px"/>  <!--  Nuceleotide change   -->
+            <col style="width:200px"/>  <!-- Amino acid change    -->
+            <col style="width:200px"/>  <!-- Zygosity    -->
+            <col style="width:200px"/>  <!--     -->  
+            <col style="width:100px"/>  <!--     -->
+            <col style="width:80px"/>   <!--     -->
+            <col style="width:80px"/>  <!--     -->
+            <col style="width:80px"/>              
             </colgroup>
       <thead>
           <tr>
